2005-10-11  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Darin.

        workaround for <rdar://problem/4294625> to fix our build
        
        * kwq/KWQPointArray.h:
        * kwq/KWQSize.h:

2005-10-10  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by eric
        
        <rdar://problem/4283218> M-JPEG / Server Push and JavaScript
        
        Ignore multipart loads in numRequests, call checkCompleted() after each section is complete.

        * khtml/misc/loader.cpp:
        
2005-10-11  Adele Peterson  <adele@apple.com>

        Rolling out fix for http://bugzilla.opendarwin.org/show_bug.cgi?id=5195
        since it caused:

        REGRESSION text areas draw focus ring around each glyph, no caret in text fields
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5335

        And updated expected results.
        * fast/clip/014-expected.checksum: Updated.
        * fast/clip/014-expected.png: Updated.

        * kwq/KWQTextArea.h:
        * kwq/KWQTextArea.mm:
        (-[KWQTextAreaTextView displayRectIgnoringOpacity:]):
        (-[KWQTextAreaTextView textView:shouldDrawInsertionPointInRect:color:turnedOn:]):
        * kwq/KWQTextField.h:
        * kwq/KWQTextField.mm:
        (-[KWQTextFieldController setInDrawingMachinery:]):
        (-[KWQTextFieldController textView:shouldDrawInsertionPointInRect:color:turnedOn:]):
        (-[KWQTextField displayRectIgnoringOpacity:]):
        (-[KWQSecureTextField displayRectIgnoringOpacity:]):
        (-[KWQSearchField displayRectIgnoringOpacity:]):
        * kwq/KWQWidget.h:
        * kwq/KWQWidget.mm:
        (QWidget::QWidget):
        (QWidget::~QWidget):
        (QWidget::paint):
        (QWidget::setDeferFirstResponderChanges):

2005-10-11  Rob Buis  <rwlbuis@xs4all.nl>>

        Reviewed by eseidel.

        Fix SVGSymbolElementImpl to not warn when inheriting viewbox.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5278

        * ksvg2/svg/SVGUseElementImpl.cpp: